Fixed hover issue on mobile

--- a/style.css
+++ b/style.css
@@ -18,8 +18,16 @@ body {
     font-size: 1.6em;
 }
 
-.dot:hover {
-    color: #FF9800;
+@media(hover:hover){ /* prevents hover on mobile */
+    .dot:hover {
+	color: #FF9800;
+    }
+    .arrow:hover {
+	color: #FF9800;
+    }
+    a:hover {
+	text-decoration: underline;
+    }
 }
 
 .highlighted {
@@ -65,10 +73,6 @@ h2 {
 .arrow {
     top: 13px;
     font-size: .8em;
-}
-
-.arrow:hover {
-    color: #FF9800;
 }
 
 #dateUp {
@@ -125,10 +129,6 @@ a
 {
     color: white;
     text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
 }
 
 @media screen and (max-width: 670px) {
